--- a/src/components/BlurbWindow.astro
+++ b/src/components/BlurbWindow.astro
@@ -1,13 +1,17 @@
+---
+const baseUrl = import.meta.env.BASE_URL.replace(/\/$/, "");
+---
+
 <table class="blurb-window">
     <tr>
         <td>
-            <img src="/ui/marquee-window-left.gif" width="13" height="24" />
+            <img src={baseUrl+"/ui/marquee-window-left.gif"} width="13" height="24" />
         </td>
-        <td class="blurb-container">
+        <td class="blurb-container" style={{backgroundImage: `url(${baseUrl}/ui/marquee-window-center.gif)`}}>
             <marquee id="blurb-marquee" scrolldelay="120" scrollamount="4">Marquee test!</marquee>
         </td>
         <td>
-            <img src="/ui/marquee-window-right.gif" width="13" height="24" />
+            <img src={baseUrl+"/ui/marquee-window-right.gif"} width="13" height="24" />
         </td>
     </tr>
 </table>
@@ -21,7 +25,6 @@
         display: inline-block;
 		width: 360px;
         height: 24px;
-		background-image: url("/ui/marquee-window-center.gif");
         background-position: center left;
         text-align: right;
 	}
