--- a/src/components/MusicPlayerWindow.astro
+++ b/src/components/MusicPlayerWindow.astro
@@ -1,6 +1,10 @@
-<img class="navigation-tab" alt="Music player" src="/ui/tab-player.gif" width="200" height="32" />
+---
+const baseUrl = import.meta.env.BASE_URL.replace(/\/$/, "");
+---
+
+<img class="navigation-tab" alt="Music player" src={baseUrl + "/ui/tab-player.gif"} width="200" height="32" />
 <div class="player-window">
-    <iframe frameborder="0" width="200" height="200" id="player-frame" src="/player" />
+    <iframe frameborder="0" width="200" height="200" id="player-frame" src={baseUrl + "/player"} />
 </div>
 
 <style is:global>
