--- a/src/layouts/PostList.astro
+++ b/src/layouts/PostList.astro
@@ -17,6 +17,8 @@ interface Props {
 
 
 const { title, description, page, category = "default" } = Astro.props;
+
+const baseUrl = import.meta.env.BASE_URL.replace(/\/$/, "");
 ---
 <Layout {title}>
     <div class="listing-header">
@@ -33,7 +35,7 @@ const { title, description, page, category = "default" } = Astro.props;
     </div>
     <div class="page-navigator">
         {page.currentPage > 1? <a href="1">&lt;&lt; First</a> : <span>&lt;&lt; First</span>}
-        {page.url.prev? <a href={page.url.prev}>&lt; Prev</a>:<span>&lt; Prev</span>}
+        {page.url.prev? <a href={baseUrl + page.url.prev}>&lt; Prev</a>:<span>&lt; Prev</span>}
         <b>[</b>
         {
             [-2,-1,0,1,2].map((i) => {
@@ -47,7 +49,7 @@ const { title, description, page, category = "default" } = Astro.props;
             })
         }
         <b>]</b>
-        {page.url.next? <a href={page.url.next}>Next &gt;</a> : <span>Next &gt;</span>}
+        {page.url.next? <a href={baseUrl + page.url.next}>Next &gt;</a> : <span>Next &gt;</span>}
         {page.currentPage < page.lastPage? <a href={page.lastPage.toString()}>Last &gt;&gt;</a>:<span>Last &gt;&gt;</span>}
     </div>
 </Layout>
