--- a/src/components/Youtube.astro
+++ b/src/components/Youtube.astro
@@ -11,7 +11,7 @@ const { instance, id } = Astro.props;
 
 const INVIDIOUS_DEFAULT_INSTANCE = "https://inv.tux.pizza";
 
-const hrefOriginal = Astro.url.pathname.split("/");
+const hrefOriginal = Astro.url.pathname.split("/").filter(s => s);
 const slug = hrefOriginal[hrefOriginal.length-1];
 ---
 <AlertBox title="The Legacy Version does not support playing YouTube videos." icon="youtube">
