Add Astro badge

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -135,7 +135,7 @@ const basify = (url: string) => `url(${baseUrl}${url})`;
 					}
 				</div>
 				<center>
-					<p>Yonic Corner Legacy v{version}, hosted by GitHub Pages</p>
+					<p>Yonic Corner Legacy v{version}, hosted by GitHub Pages <a class="badge" href="https://astro.build"><img align="middle" alt="Built with Astro" src="/badge-astro.gif" width="120" height="20"/></a></p>
 					<span><a href="https://github.com/YonicDev/yonic-corner-legacy">Source code</a> | <a href={baseUrl+"/rss.xml"}><img src={baseUrl+"/icons/rss.gif"} alt="RSS" width="16" height="16" style="vertical-align: middle"/> Subscribe to feed</a> (WIP)</span>
 				</center>
 			</div>
