--- a/src/components/Picture.astro
+++ b/src/components/Picture.astro
@@ -5,9 +5,10 @@ interface Props {
     src: ImageMetadata,
     alt: string,
     width?: number | string,
+    format?: "jpg" | "jpeg" | "gif" | "png",
     nocaption?: boolean,
 }
-const { src, alt, nocaption = false } = Astro.props;
+const { src, alt, nocaption = false, format = "jpg" } = Astro.props;
 const margin = 12;
 const padding = 3;
 const MAX_WIDTH = 454;
@@ -18,7 +19,7 @@ const borderImg = await getImage({src, width: 1, height: 1, format: "gif"});
 ---
 <center>
     <div class="figure" style={{background: `url(${borderImg.src})`, width: `${trueWidth}px`, margin: `${margin}px 0`, padding: `${padding}px`}}>
-        <Image {src} {alt} width={trueWidth} format="jpg" />
+        <Image {src} {alt} width={trueWidth} {format} />
         {!nocaption && <div class="caption" style={{width: trueWidth+'px'}}>
             <div style="padding: 10px">
                 <slot />
