Add time to read article

--- a/src/components/Youtube.astro
+++ b/src/components/Youtube.astro
@@ -6,6 +6,7 @@ import { MODERN_WEBSITE } from "@lib/settings";
 interface Props {
     instance?: string,
     id: string,
+    duration?: `${number}:${number}`
 }
 const { instance, id } = Astro.props;
 
