--- a/src/pages/blog/article/[...slug].astro
+++ b/src/pages/blog/article/[...slug].astro
@@ -69,8 +69,9 @@ const baseUrl = import.meta.env.BASE_URL.replace(/\/$/, "");
     }
 }
 
-const {Content} = await post.render();
+const {Content, remarkPluginFrontmatter} = await post.render();
 const hero = await getHeroImage();
+const {readingTime} = remarkPluginFrontmatter;
 ---
 
 <Layout {...post.data}>
@@ -82,6 +83,7 @@ const hero = await getHeroImage();
     <div>
         <span><img class="icon" src={baseUrl + "/icons/article.gif"} alt="Published" title="Published"/> {dateFormat.format(post.data.pubDate)}</span>
         { post.data.updatedDate && <span><img class="icon" src={baseUrl + "/icons/edit.gif"} alt="Last modified" title="Last modified"/> {dateFormat.format(post.data.updatedDate)}</span> }
+        <span><img class="icon" src={baseUrl + "/icons/time.gif"} alt="Time to read" title="Time to read"/> {readingTime.text} min{readingTime.text!=1 && "s"} {readingTime.video > 0 && `(plus ${readingTime.video} min${readingTime.video!=1 && "s"} of videos)`}</span>
     </div>
     <div class="tags-list">
         <img class="icon" src={baseUrl + "/icons/tags.gif"} alt="Tags" title="Tags" width="16" height="16"/> Tags:
