Fix typo on About page

--- a/src/layouts/About.astro
+++ b/src/layouts/About.astro
@@ -9,7 +9,7 @@ const { title } = frontmatter;
 <Layout {title}>
     <div id="main-article" class="article">
 		<h1>{title}</h1>
-		<p><img alt="Creation" src={baseUrl + "/icons/about.gif"} width="16" height="16"> Legacy Blog estabilished on October 3, 2023</p>
+		<p><img alt="Creation" src={baseUrl + "/icons/about.gif"} width="16" height="16"> Legacy Blog established on October 3, 2023</p>
 		<hr/>
         <slot />
     </div>
