--- a/src/pages/category/[category]/[page].astro
+++ b/src/pages/category/[category]/[page].astro
@@ -1,5 +1,5 @@
 ---
-import { CollectionEntry, getCollection } from "astro:content";
+import { type CollectionEntry, getCollection } from "astro:content";
 
 import type { GetStaticPaths, Page } from "astro";
 
@@ -9,7 +9,7 @@ import Layout from "@lib/layouts/PostList.astro";
 export const getStaticPaths: GetStaticPaths = async ({paginate}) => {
     const ids = Object.keys(categories) as CategoryId[];
     const posts = (await getCollection('blog'));
-    return ids.map(catId => {
+    return ids.flatMap(catId => {
         const category = categories[catId];
         const filteredPosts = posts.filter(post => {
                 return post.data.category === catId && (import.meta.env.DEV || !post.data.draft);
