--- a/src/pages/blog/[page].astro
+++ b/src/pages/blog/[page].astro
@@ -1,21 +1,15 @@
 ---
-import { CollectionEntry, getCollection } from "astro:content";
+import { type CollectionEntry, getCollection } from "astro:content";
 
 import type { GetStaticPaths, Page } from "astro";
 
-import { BLOG_PAGE_SIZE } from "@lib/settings";
 import Layout from "@lib/layouts/PostList.astro";
 
+import { filterPosts, sortPosts } from "@lib/util";
+import { BLOG_PAGE_SIZE } from "@lib/settings";
+
 export const getStaticPaths: GetStaticPaths = async ({paginate}) => {
-    const posts = (await getCollection('blog')).filter(post => {
-        return import.meta.env.DEV || !post.data.draft;
-        }).sort((a, b) => {
-            const aPub = a.data.pubDate.getTime();
-            const bPub = b.data.pubDate.getTime();
-            const aEdt = a.data.updatedDate?.getTime() ?? 0;
-            const bEdt = b.data.updatedDate?.getTime() ?? 0;
-            return Math.max(bPub, bEdt) - Math.max(aEdt, aPub) || a.id.localeCompare(b.id);
-        })
+    const posts = (await getCollection('blog')).filter(filterPosts).sort(sortPosts);
 
     return paginate(posts, {pageSize: BLOG_PAGE_SIZE});
 }
