--- a/src/pages/blog/article/[...slug].astro
+++ b/src/pages/blog/article/[...slug].astro
@@ -1,11 +1,13 @@
 ---
-import { CollectionEntry, getCollection, getEntry } from 'astro:content';
+import { type CollectionEntry, getCollection, getEntry } from 'astro:content';
 import { Image } from 'astro:assets';
 
 import type { ImageMetadata } from 'astro';
 
 import Layout from "@lib/layouts/Article.astro";
 import Series from "@lib/components/Series.astro";
+
+import { filterPosts, sortPosts } from '@lib/util';
 import { categories } from '@lib/settings';
 
 interface Props {
@@ -15,15 +17,7 @@ interface Props {
 }
 
 export async function getStaticPaths() {
-	const posts = (await getCollection('blog')).filter(post => {
-        return import.meta.env.DEV || !post.data.draft;
-    }).sort((a, b) => {
-        const aPub = a.data.pubDate.getTime();
-        const bPub = b.data.pubDate.getTime();
-        const aEdt = a.data.updatedDate?.getTime() ?? 0;
-        const bEdt = b.data.updatedDate?.getTime() ?? 0;
-        return Math.max(aPub, aEdt) - Math.max(bEdt, bPub) || a.id.localeCompare(b.id);
-    })
+	const posts = (await getCollection('blog')).filter(filterPosts).sort(sortPosts)
     
 	return posts.map((post, i) => ({
 		params: { slug: post.slug },
@@ -39,7 +33,7 @@ let seriesPosts: CollectionEntry<"blog">[] = [];
 let series: CollectionEntry<"series"> | undefined = undefined;
 let seriesIndex = -1;
 if(post.data.series) {
-    seriesPosts = allPosts.filter(p => p.data.series?.id.id === post.data.series?.id.id)
+    seriesPosts = allPosts.filter(other => post.data.series && other.data.series && post.data.series.id.id === other.data.series.id.id)
         .sort((a,b) => a.data.series!.order - b.data.series!.order);
     seriesIndex = seriesPosts.indexOf(post);
     series = await getEntry(post.data.series.id);
