--- a/src/pages/blog/article/[...slug].astro
+++ b/src/pages/blog/article/[...slug].astro
@@ -57,7 +57,7 @@ const baseUrl = import.meta.env.BASE_URL.replace(/\/$/, "");
  */
  async function getHeroImage(): Promise<ImageMetadata | null> {
     try {
-        return (await import(`../../../assets/articles/${post.slug}/hero.png`)).default
+        return (await import(`../../../assets/articles/${post.slug}/hero-legacy.png`)).default
     } catch {
         return null;
     }
